--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,49 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+ --clr-neon: hsl(317 100% 54%);
+ --clr-bg: hsl(323 21% 16%)
+}
+
+.neon {
+  font-size: 1rem;
+  font-weight: bolder;
+  display: inline-block;
+  cursor: pointer;
+  border: var(--clr-neon) 0.125em solid;
+  padding: 0.25em 1em;
+  color: var(--clr-neon);
+  border-radius: 0.25em;
+  background: var(--clr-bg);
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon)
+}
+
+.neon::before {
+  pointer-events: none;
+  content: '';
+  background: var(--clr-neon);
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  filter: blur(1em);
+  opacity: 0.7;
+}
+
+.neon::after {
+  content: '';
+  z-index: -1;
+  transition: opacity 100ms linear;
+
+}
+
+.neon:hover,
+.neon:focus {
+  background-color: var(--clr-neon);
+  color: var(--clr-bg);
+  text-shadow: none;
 }
 
 .loginBackground {
