--- a/src/index.css
+++ b/src/index.css
@@ -4,46 +4,19 @@
   box-sizing: border-box;
 }
 
-:root {
- --clr-neon: hsl(317 100% 54%);
- --clr-bg: hsl(323 21% 16%)
-}
-
-.neon {
-  font-size: 1rem;
-  font-weight: bolder;
-  display: inline-block;
-  cursor: pointer;
-  border: var(--clr-neon) 0.125em solid;
-  padding: 0.25em 1em;
-  color: var(--clr-neon);
-  border-radius: 0.25em;
-  background: var(--clr-bg);
-  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-  box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon)
-}
-
-.neon::before {
-  pointer-events: none;
-  content: '';
-  background: var(--clr-neon);
-  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-  filter: blur(1em);
-  opacity: 0.7;
-}
-
-.neon::after {
-  content: '';
-  z-index: -1;
-  transition: opacity 100ms linear;
-
-}
-
-.neon:hover,
-.neon:focus {
-  background-color: var(--clr-neon);
-  color: var(--clr-bg);
-  text-shadow: none;
+.nameOfUser {
+  font-size: 12px;
+  font-weight: 700;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, #fff, #fff, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
 .loginBackground {
@@ -54,4 +27,14 @@
 .textInput {
   margin-top: 20px;
   border: 1px solid red;
+}
+
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+
+  100% {
+    background-position: 500%;
+  }
 }
