--- a/src/containers/filterCss.css
+++ b/src/containers/filterCss.css
@@ -72,17 +72,18 @@
 .carousel {
     width: 100%;
     margin-top: 10px;
-    display: flex;
-    border: 1px solid red
 }
 
 .slider {
-    width: 50%;
-    border: 2px solid blue;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
-.slider div{
+.carouselItem img {
     width: 100%;
+    height: 400px;
 }
 
 @media only screen and (max-width: 960px){
@@ -101,5 +102,10 @@
         margin-left: 0;
         margin: auto;
         margin-top: 10px;
+    }
+    
+    .carouselItem img {
+        height: 150px;
+        
     }
 }
