--- a/src/containers/filterCss.css
+++ b/src/containers/filterCss.css
@@ -86,6 +86,42 @@
     height: 400px;
 }
 
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .pagination a {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #6c7ac9;
+    color: #6c7ac9;
+    background: black;
+    font-weight: 700;
+    outline: none;
+    margin-left: 5px;
+  }
+  
+  .pagination__link {
+    font-weight: bold;
+  }
+  
+  .pagination__link--active a {
+    color: #fff;
+    background: #6c7ac9;
+  }
+  
+  .pagination__link--disabled a {
+    color: rgb(198, 197, 202);
+    border: 1px solid rgb(198, 197, 202);
+  }
+  
+  
+
 @media only screen and (max-width: 960px){
     .filterContainer {
         display: flex;
