--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background: #003049;
+    background: rgb(12, 12, 46);
 min-height: calc(100vh - 500px);
 display: flex;
 justify-content: center;
