--- a/src/cart/cartCss.css
+++ b/src/cart/cartCss.css
@@ -31,15 +31,34 @@
 }
 
 .checkoutDiv {
-  border: 1px solid red;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-@media only screen and (max-width: 960px){
-    .cartItemsDiv {
-        width: 100%;
-      }
+.checkoutDiv button{
+  outline: none;
+}
+
+@media only screen and (max-width: 960px) and (min-width: 768px){
+
+  .cartItemsDiv {
+    width: 47%;
+  }
 
       .cartItemsDiv img {
         width: 100%;
+        height: 200px;
     }
+}
+
+@media only screen and (max-width: 767px){
+  .cartItemsDiv {
+    width: 100%;
+  }
+
+  .cartItemsDiv img {
+    width: 100%;
+    height: 200px;
+}
 }
