--- a/src/cart/cartCss.css
+++ b/src/cart/cartCss.css
@@ -67,6 +67,17 @@
 
 .modalOrder {
   margin-top: 120px;
+  float: center;
+  
+}
+
+.boxOrder {
+  width: 50%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 960px) and (min-width: 768px){
