--- a/src/cart/cartCss.css
+++ b/src/cart/cartCss.css
@@ -63,12 +63,13 @@
   outline: none;
   color: white;
   font-weight: bolder;
+  margin-bottom: 10px;
 }
 
 .modalOrder {
   margin-top: 120px;
   float: center;
-  
+  background: rgb(23, 10, 36);
 }
 
 .boxOrder {
@@ -78,6 +79,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: rgb(23, 10, 36);
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 20px;
 }
 
 @media only screen and (max-width: 960px) and (min-width: 768px){
@@ -108,6 +118,10 @@
 }
 
 .orderField {
+  width: 100%;
+}
+
+.boxOrder {
   width: 100%;
 }
 }
