--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -16,6 +16,12 @@
     margin-top: 20px;
 }
 
+.addProductButton {
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 700;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 650px){
     .addProductItem {
         width: 47%
