--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -22,6 +22,31 @@
     font-weight: 700;
 }
 
+.addProductModal {
+    display: flex;
+    justify-content: center;
+    margin-top: 120px;
+    background: grey;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.contentForm {
+    width: 40%;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 650px){
     .addProductItem {
         width: 47%
