--- a/src/cart/modalCss.css
+++ b/src/cart/modalCss.css
@@ -38,6 +38,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .modalDiv p {
@@ -47,6 +48,11 @@
 
 .modalDiv img {
     width: 50%;
+    
+}
+
+.productDesc {
+    width: 420px;
 }
 
 @media only screen and (max-width: 960px) {
@@ -55,6 +61,10 @@
     }
 
     .modalDiv {
+        width: 100%;
+    }
+
+    .productDesc {
         width: 100%;
     }
 
