--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -49,9 +49,8 @@ input[type="file"] {
     cursor: pointer;
 }
 
-.productDesc {
+.addProductItem .productDesc {
     width: 300px;
-   
 }
 
 @media only screen and (max-width: 960px) and (min-width: 650px){
@@ -63,22 +62,23 @@ input[type="file"] {
         width: 100%;
     }
 
-    .productDesc {
+    .addProductItem .productDesc {
         width:100%;
     }
 }
 
 @media only screen and (max-width: 640px) {
     .addProductItem {
-        width: 100%
+        width: 100%;
     }
 
     .addProduct img {
         width: 100%;
     }
 
-    .productDesc {
+    .addProductItem .productDesc {
         width:100%;
+        
     }
     
 }
