--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   animation: animate 3s linear infinite;
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  -webkit-transform: translateZ(0);
 }
 
 .loginBackground {
