--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -42,6 +42,14 @@ input[type="file"] {
     display: none;
 }
 
+.errorHandler {
+    display: none;
+}
+
+.show {
+    display: inline-flex;
+}
+
 .custom-file-upload {
     border: 1px solid #ccc;
     display: inline-block;
