--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -15,3 +15,21 @@
     margin: auto;
     margin-top: 20px;
 }
+
+.socialHandles {
+    text-align: center;
+    line-height: 30px
+}
+
+.socialHandles a, p {
+    cursor:pointer;
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+}
+
+@media only screen and (max-width: 768px){
+  .formik {
+      width: 100%;
+  }
+}
