--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,7 +3,7 @@
 min-height: calc(100vh - 500px);
 display: flex;
 justify-content: center;
-align-items: center;
+flex-direction: column;
 }
 
 .footerDiv {
@@ -13,7 +13,14 @@ align-items: center;
 .contactIcons {
   display: flex;
   justify-content: space-between;
+  width: 50%;
+  margin: auto;
   margin-top: 20px;
+}
+
+.contactIcons img {
+  width: 50px;
+  height: 50px;
 }
 
 .contactNumber {
@@ -35,12 +42,6 @@ align-items: center;
     color: #ffffff;
     font-size: 20px;
     font-weight: bolder;
-}
-
-.contactIcons a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 30px;
 }
 
 @-webkit-keyframes glow {
