added landing page images

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -50,6 +50,7 @@ flex-direction: column;
   .contactIcons {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     width: 100%;
   }
 
