--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -1,4 +1,59 @@
 .homepage {
   display: flex;
   flex-direction: column;
+  /* background: url('../images/new-image.png') no-repeat; */
+  /* background-color: #FCB304; */
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.homeContent {
+  display: flex;
+  margin-top: 20px;
+}
+
+.caption {
+  width: 40%;
+  margin: auto;
+}
+
+.forImage {
+  margin: auto;
+}
+
+/* .caption img {
+  width: 400px;
+  height: 250px;
+} */
+
+@media only screen and (max-width: 1024px) and (min-width: 769px){
+  .homeContent {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .homeContent {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .caption {
+    margin: 0;
+    width: 100%;
+  }
+
+  .caption img {
+    width: 100%;
+  }
+
+  .forImage {
+    width: 100%;
+    padding-left: 20px;
+  }
+
+  .forImage img {
+    width: 100%;
+  }
 }
