--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -14,17 +14,20 @@
 
 .caption {
   width: 40%;
+  margin-bottom: 20px;
   margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.caption img {
+  width: 300px;
+  height: 400px;
 }
 
 .forImage {
   margin: auto;
 }
-
-/* .caption img {
-  width: 400px;
-  height: 250px;
-} */
 
 @media only screen and (max-width: 1024px) and (min-width: 769px){
   .homeContent {
