--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -33,6 +33,15 @@
     color: black;
 }
 
+#insta {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  -webkit-background-clip: text;
+          /* Also define standard property for compatibility */
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+    
+}
+
 @media only screen and (max-width: 768px){
   .formiks {
       width: 100%;
