--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -22,10 +22,10 @@
   justify-content: center;
 }
 
-.caption img {
+/* .caption img {
   width: 300px;
   height: 400px;
-}
+} */
 
 .forImage {
   margin: auto;
@@ -70,10 +70,7 @@ text-align: center;
     width: 100%;
   }
 
-  .caption img {
-    width: 100%;
-  }
-
+  
   .forImage {
     width: 100%;
     padding-left: 20px;
