--- a/src/cart/modalCss.css
+++ b/src/cart/modalCss.css
@@ -1,6 +1,7 @@
 .theModal {
     background: rgb(12, 12, 46);
     display: flex;
+    margin-top: 20px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
