--- a/src/containers/filterCss.css
+++ b/src/containers/filterCss.css
@@ -120,8 +120,6 @@
     border: 1px solid rgb(198, 197, 202);
   }
   
-  
-
 @media only screen and (max-width: 960px){
     .filterContainer {
         display: flex;
@@ -140,8 +138,16 @@
         margin-top: 10px;
     }
     
-    .carouselItem img {
-        height: 150px;
-        
-    }
+}
+
+@media only screen and (max-width: 768) and (min-width: 610px){
+  .carouselItem img {
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .carouselItem img {
+    height: 150px;
+  }
 }
