--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -45,6 +45,22 @@ text-align: center;
   color: #ffffff;
 }
 
+.carousel {
+  width: 100%;
+}
+
+.slider {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.carouselItem img {
+  width: 100%;
+  height: 400px;
+}
+
 @media only screen and (max-width: 768px) and (min-width: 610px){
   .homeContent {
     display: flex;
@@ -56,6 +72,10 @@ text-align: center;
 
   .forImage {
     padding-left: 20px;
+  }
+
+  .carouselItem img {
+    height: 300px;
   }
 }
 
@@ -79,5 +99,10 @@ text-align: center;
   .forImage img {
     width: 100%;
   }
+
+  .carouselItem img {
+    height: 150px;
+  }
+  
 }
 
