added image modifications

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@
 .loginBackground {
   background: url('./images/login.jpg') no-repeat;
   background-size: cover;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .loginBackground p {
