--- a/src/cart/modalCss.css
+++ b/src/cart/modalCss.css
@@ -5,8 +5,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 .modalClose {
@@ -17,7 +18,6 @@
     outline: none;
     color: white;
     font-weight: bolder;
-    margin-bottom: 20px;
 }
 
 .cartButton {
