--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -33,6 +33,27 @@
   height: 400px;
 } */
 
+.searchContainer {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.searchContainer input {
+    width: 100%;
+    height: 40px;
+    outline: none;
+    border:1px solid white;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 15px;
+    background: #003049;
+}
+
 .forImage {
   margin: auto;
 }
@@ -161,7 +182,9 @@ text-align: center;
     height: 150px;
   }
 
-  
+  .searchContainer {
+    width: 100%;
+  }
   
 }
 
