--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,18 @@
 
 .companyLogo {
   margin-left: -24px;
-  background: rgb(172,44,36);
-  border: 2px solid rgb(172,44,36);
   margin-top: 0;
   margin-bottom: 0;
   min-height: 68px;
+  display: flex;
+  width: 150px;
+  align-items: center;
+}
+
+.companyLogo img {
+  min-width: 100%;
+  border-radius: 10px;
+  height: 50px;
 }
 
 .fas {
@@ -52,6 +59,11 @@
   color: #ffffff;
 }
 
+@media only screen and (max-width: 600px){
+  .companyLogo {
+    max-width: 130px;
+  }
+}
 
 @keyframes animate {
   0% {
