--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -75,6 +75,13 @@ input[type="file"] {
     width: 300px;
 }
 
+.read-or-hide {
+   color: #fff;
+   font-weight: 700;
+   cursor: pointer;
+   font-size: 20px;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 650px){
     .addProductItem {
         width: 47%
