--- a/src/containers/addProduct.css
+++ b/src/containers/addProduct.css
@@ -93,6 +93,10 @@ input[type="file"] {
    font-size: 20px;
 }
 
+.closeForm {
+    display: none!important;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 650px){
     .addProductItem {
         width: 47%
