--- a/src/components/orderCss.css
+++ b/src/components/orderCss.css
@@ -17,6 +17,15 @@
     height: 180px;
 }
 
+.star {
+  cursor: pointer;
+  transition: color 200ms;
+}
+
+.hide-rating {
+  display: none;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 610px){
     .orderContent {
       width: 48%;
