--- a/src/components/orderCss.css
+++ b/src/components/orderCss.css
@@ -26,6 +26,13 @@
   display: none;
 }
 
+.PaperForm {
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
 @media only screen and (max-width: 960px) and (min-width: 610px){
     .orderContent {
       width: 48%;
@@ -38,4 +45,11 @@
       margin: 0;
       margin-top: 20px;
     }
+}
+
+@media only screen and (min-width: 900px){
+  .PaperForm {
+  width: 50%;
+  align-self: center;
+  }
 }
